baziliolanguage/BazilioParser.py
# Generated from Bazilio.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BazilioParser ( Parser ):

    grammarFileName = "Bazilio.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<?>'", "'<w>'", "'if'", "'else'", "'while'", 
                     "'{'", "'}'", "'8<'", "'<<'", "'(:)'", "'#'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<-'", "'*'", "'/'", "'%'", "'+'", "'-'", "'='", "'/='", 
                     "'>'", "'<'", "'>='", "'<='", "'|:'", "':|'", "'['", 
                     "']'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "CUTTING", "ADDING", "REPRDO", "SIZE", "PROCNAME", 
                      "NOTE", "VAR", "NUM", "STRING", "ASSIGN", "MUL", "DIV", 
                      "MOD", "SUM", "SUB", "EQ", "NEQ", "GT", "LT", "GET", 
                      "LET", "START_BLOCK", "END_BLOCK", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "LEFT_PARANTHESES", "RIGHT_PARANTHESES", 
                      "COMMENT", "WS" ]

    RULE_root = 0
    RULE_procedureDefinition = 1
    RULE_parametersId = 2
    RULE_instructions = 3
    RULE_instruction = 4
    RULE_assign = 5
    RULE_input_ = 6
    RULE_output_ = 7
    RULE_reprod = 8
    RULE_procedureCall = 9
    RULE_condition = 10
    RULE_while_ = 11
    RULE_addElementToList = 12
    RULE_removeElementFromList = 13
    RULE_sizeFromList = 14
    RULE_query = 15
    RULE_expr = 16
    RULE_parametersExpr = 17
    RULE_list = 18

    ruleNames =  [ "root", "procedureDefinition", "parametersId", "instructions", 
                   "instruction", "assign", "input_", "output_", "reprod", 
                   "procedureCall", "condition", "while_", "addElementToList", 
                   "removeElementFromList", "sizeFromList", "query", "expr", 
                   "parametersExpr", "list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    CUTTING=8
    ADDING=9
    REPRDO=10
    SIZE=11
    PROCNAME=12
    NOTE=13
    VAR=14
    NUM=15
    STRING=16
    ASSIGN=17
    MUL=18
    DIV=19
    MOD=20
    SUM=21
    SUB=22
    EQ=23
    NEQ=24
    GT=25
    LT=26
    GET=27
    LET=28
    START_BLOCK=29
    END_BLOCK=30
    LEFT_BRACKET=31
    RIGHT_BRACKET=32
    LEFT_PARANTHESES=33
    RIGHT_PARANTHESES=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def procedureDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BazilioParser.ProcedureDefinitionContext)
            else:
                return self.getTypedRuleContext(BazilioParser.ProcedureDefinitionContext,i)


        def getRuleIndex(self):
            return BazilioParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = BazilioParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 38
                self.procedureDefinition()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCNAME(self):
            return self.getToken(BazilioParser.PROCNAME, 0)

        def parametersId(self):
            return self.getTypedRuleContext(BazilioParser.ParametersIdContext,0)


        def START_BLOCK(self):
            return self.getToken(BazilioParser.START_BLOCK, 0)

        def instructions(self):
            return self.getTypedRuleContext(BazilioParser.InstructionsContext,0)


        def END_BLOCK(self):
            return self.getToken(BazilioParser.END_BLOCK, 0)

        def getRuleIndex(self):
            return BazilioParser.RULE_procedureDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureDefinition" ):
                return visitor.visitProcedureDefinition(self)
            else:
                return visitor.visitChildren(self)




    def procedureDefinition(self):

        localctx = BazilioParser.ProcedureDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procedureDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(BazilioParser.PROCNAME)
            self.state = 45
            self.parametersId()
            self.state = 46
            self.match(BazilioParser.START_BLOCK)
            self.state = 47
            self.instructions()
            self.state = 48
            self.match(BazilioParser.END_BLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(BazilioParser.VAR)
            else:
                return self.getToken(BazilioParser.VAR, i)

        def getRuleIndex(self):
            return BazilioParser.RULE_parametersId

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametersId" ):
                return visitor.visitParametersId(self)
            else:
                return visitor.visitChildren(self)




    def parametersId(self):

        localctx = BazilioParser.ParametersIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parametersId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 50
                self.match(BazilioParser.VAR)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BazilioParser.InstructionContext)
            else:
                return self.getTypedRuleContext(BazilioParser.InstructionContext,i)


        def getRuleIndex(self):
            return BazilioParser.RULE_instructions

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstructions" ):
                return visitor.visitInstructions(self)
            else:
                return visitor.visitChildren(self)




    def instructions(self):

        localctx = BazilioParser.InstructionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instructions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 21806) != 0):
                self.state = 56
                self.instruction()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(BazilioParser.AssignContext,0)


        def input_(self):
            return self.getTypedRuleContext(BazilioParser.Input_Context,0)


        def output_(self):
            return self.getTypedRuleContext(BazilioParser.Output_Context,0)


        def reprod(self):
            return self.getTypedRuleContext(BazilioParser.ReprodContext,0)


        def procedureCall(self):
            return self.getTypedRuleContext(BazilioParser.ProcedureCallContext,0)


        def condition(self):
            return self.getTypedRuleContext(BazilioParser.ConditionContext,0)


        def while_(self):
            return self.getTypedRuleContext(BazilioParser.While_Context,0)


        def addElementToList(self):
            return self.getTypedRuleContext(BazilioParser.AddElementToListContext,0)


        def removeElementFromList(self):
            return self.getTypedRuleContext(BazilioParser.RemoveElementFromListContext,0)


        def getRuleIndex(self):
            return BazilioParser.RULE_instruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = BazilioParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instruction)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [14]:
                    self.state = 62
                    self.assign()
                    pass
                elif token in [1]:
                    self.state = 63
                    self.input_()
                    pass
                elif token in [2]:
                    self.state = 64
                    self.output_()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [10]:
                    self.state = 67
                    self.reprod()
                    pass
                elif token in [12]:
                    self.state = 68
                    self.procedureCall()
                    pass
                elif token in [3]:
                    self.state = 69
                    self.condition()
                    pass
                elif token in [5]:
                    self.state = 70
                    self.while_()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [14]:
                    self.state = 73
                    self.addElementToList()
                    pass
                elif token in [8]:
                    self.state = 74
                    self.removeElementFromList()
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BazilioParser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(BazilioParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BazilioParser.ExprContext,0)


        def getRuleIndex(self):
            return BazilioParser.RULE_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = BazilioParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(BazilioParser.VAR)
            self.state = 80
            self.match(BazilioParser.ASSIGN)
            self.state = 81
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BazilioParser.VAR, 0)

        def getRuleIndex(self):
            return BazilioParser.RULE_input_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_" ):
                return visitor.visitInput_(self)
            else:
                return visitor.visitChildren(self)




    def input_(self):

        localctx = BazilioParser.Input_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_input_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(BazilioParser.T__0)
            self.state = 84
            self.match(BazilioParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BazilioParser.ExprContext,0)


        def getRuleIndex(self):
            return BazilioParser.RULE_output_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_" ):
                return visitor.visitOutput_(self)
            else:
                return visitor.visitChildren(self)




    def output_(self):

        localctx = BazilioParser.Output_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_output_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(BazilioParser.T__1)
            self.state = 87
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReprodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPRDO(self):
            return self.getToken(BazilioParser.REPRDO, 0)

        def expr(self):
            return self.getTypedRuleContext(BazilioParser.ExprContext,0)


        def getRuleIndex(self):
            return BazilioParser.RULE_reprod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReprod" ):
                return visitor.visitReprod(self)
            else:
                return visitor.visitChildren(self)




    def reprod(self):

        localctx = BazilioParser.ReprodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_reprod)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(BazilioParser.REPRDO)
            self.state = 90
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCNAME(self):
            return self.getToken(BazilioParser.PROCNAME, 0)

        def parametersExpr(self):
            return self.getTypedRuleContext(BazilioParser.ParametersExprContext,0)


        def getRuleIndex(self):
            return BazilioParser.RULE_procedureCall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureCall" ):
                return visitor.visitProcedureCall(self)
            else:
                return visitor.visitChildren(self)




    def procedureCall(self):

        localctx = BazilioParser.ProcedureCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_procedureCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(BazilioParser.PROCNAME)
            self.state = 93
            self.parametersExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BazilioParser.ExprContext,0)


        def START_BLOCK(self, i:int=None):
            if i is None:
                return self.getTokens(BazilioParser.START_BLOCK)
            else:
                return self.getToken(BazilioParser.START_BLOCK, i)

        def instructions(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BazilioParser.InstructionsContext)
            else:
                return self.getTypedRuleContext(BazilioParser.InstructionsContext,i)


        def END_BLOCK(self, i:int=None):
            if i is None:
                return self.getTokens(BazilioParser.END_BLOCK)
            else:
                return self.getToken(BazilioParser.END_BLOCK, i)

        def getRuleIndex(self):
            return BazilioParser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = BazilioParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(BazilioParser.T__2)
            self.state = 96
            self.expr(0)
            self.state = 97
            self.match(BazilioParser.START_BLOCK)
            self.state = 98
            self.instructions()
            self.state = 99
            self.match(BazilioParser.END_BLOCK)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 100
                self.match(BazilioParser.T__3)
                self.state = 101
                self.match(BazilioParser.START_BLOCK)
                self.state = 102
                self.instructions()
                self.state = 103
                self.match(BazilioParser.END_BLOCK)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BazilioParser.ExprContext,0)


        def START_BLOCK(self):
            return self.getToken(BazilioParser.START_BLOCK, 0)

        def instructions(self):
            return self.getTypedRuleContext(BazilioParser.InstructionsContext,0)


        def END_BLOCK(self):
            return self.getToken(BazilioParser.END_BLOCK, 0)

        def getRuleIndex(self):
            return BazilioParser.RULE_while_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_" ):
                return visitor.visitWhile_(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = BazilioParser.While_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_while_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(BazilioParser.T__4)
            self.state = 108
            self.expr(0)
            self.state = 109
            self.match(BazilioParser.START_BLOCK)
            self.state = 110
            self.instructions()
            self.state = 111
            self.match(BazilioParser.END_BLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddElementToListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BazilioParser.VAR, 0)

        def ADDING(self):
            return self.getToken(BazilioParser.ADDING, 0)

        def expr(self):
            return self.getTypedRuleContext(BazilioParser.ExprContext,0)


        def getRuleIndex(self):
            return BazilioParser.RULE_addElementToList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddElementToList" ):
                return visitor.visitAddElementToList(self)
            else:
                return visitor.visitChildren(self)




    def addElementToList(self):

        localctx = BazilioParser.AddElementToListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_addElementToList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(BazilioParser.VAR)
            self.state = 114
            self.match(BazilioParser.ADDING)
            self.state = 115
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RemoveElementFromListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUTTING(self):
            return self.getToken(BazilioParser.CUTTING, 0)

        def VAR(self):
            return self.getToken(BazilioParser.VAR, 0)

        def LEFT_BRACKET(self):
            return self.getToken(BazilioParser.LEFT_BRACKET, 0)

        def expr(self):
            return self.getTypedRuleContext(BazilioParser.ExprContext,0)


        def RIGHT_BRACKET(self):
            return self.getToken(BazilioParser.RIGHT_BRACKET, 0)

        def getRuleIndex(self):
            return BazilioParser.RULE_removeElementFromList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRemoveElementFromList" ):
                return visitor.visitRemoveElementFromList(self)
            else:
                return visitor.visitChildren(self)




    def removeElementFromList(self):

        localctx = BazilioParser.RemoveElementFromListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_removeElementFromList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BazilioParser.CUTTING)
            self.state = 118
            self.match(BazilioParser.VAR)
            self.state = 119
            self.match(BazilioParser.LEFT_BRACKET)
            self.state = 120
            self.expr(0)
            self.state = 121
            self.match(BazilioParser.RIGHT_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SizeFromListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIZE(self):
            return self.getToken(BazilioParser.SIZE, 0)

        def VAR(self):
            return self.getToken(BazilioParser.VAR, 0)

        def getRuleIndex(self):
            return BazilioParser.RULE_sizeFromList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSizeFromList" ):
                return visitor.visitSizeFromList(self)
            else:
                return visitor.visitChildren(self)




    def sizeFromList(self):

        localctx = BazilioParser.SizeFromListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_sizeFromList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(BazilioParser.SIZE)
            self.state = 124
            self.match(BazilioParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BazilioParser.VAR, 0)

        def LEFT_BRACKET(self):
            return self.getToken(BazilioParser.LEFT_BRACKET, 0)

        def expr(self):
            return self.getTypedRuleContext(BazilioParser.ExprContext,0)


        def RIGHT_BRACKET(self):
            return self.getToken(BazilioParser.RIGHT_BRACKET, 0)

        def getRuleIndex(self):
            return BazilioParser.RULE_query

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = BazilioParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(BazilioParser.VAR)
            self.state = 127
            self.match(BazilioParser.LEFT_BRACKET)
            self.state = 128
            self.expr(0)
            self.state = 129
            self.match(BazilioParser.RIGHT_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BazilioParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MultiplicationContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BazilioParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BazilioParser.ExprContext)
            else:
                return self.getTypedRuleContext(BazilioParser.ExprContext,i)

        def MUL(self):
            return self.getToken(BazilioParser.MUL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplication" ):
                return visitor.visitMultiplication(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BazilioParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(BazilioParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)


    class ListExpressionContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BazilioParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def list_(self):
            return self.getTypedRuleContext(BazilioParser.ListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListExpression" ):
                return visitor.visitListExpression(self)
            else:
                return visitor.visitChildren(self)


    class NotEqualsToContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BazilioParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BazilioParser.ExprContext)
            else:
                return self.getTypedRuleContext(BazilioParser.ExprContext,i)

        def NEQ(self):
            return self.getToken(BazilioParser.NEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNotEqualsTo" ):
                return visitor.visitNotEqualsTo(self)
            else:
                return visitor.visitChildren(self)


    class GreaterThanOrEqualsToContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BazilioParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BazilioParser.ExprContext)
            else:
                return self.getTypedRuleContext(BazilioParser.ExprContext,i)

        def GET(self):
            return self.getToken(BazilioParser.GET, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGreaterThanOrEqualsTo" ):
                return visitor.visitGreaterThanOrEqualsTo(self)
            else:
                return visitor.visitChildren(self)


    class SumContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BazilioParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BazilioParser.ExprContext)
            else:
                return self.getTypedRuleContext(BazilioParser.ExprContext,i)

        def SUM(self):
            return self.getToken(BazilioParser.SUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum" ):
                return visitor.visitSum(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):
